# Creer_des_applications_avec_Qt5

./: .gitignore  README.md
1er_programmes/enginio/: README.md
1er_programmes/enginio/enginiotools_0.6/: README.md
1er_programmes/enginio/enginiotools_1.0/: README.md
1er_programmes/enginiotools/: enginiotools_fr_FR.qm  mainwindow.cpp
1er_programmes/enginiotools_0.6/enginiotools/: enginiotools_fr_FR.ts  main.cpp  mainwindow.cpp
1er_programmes/enginiotools_0.6/qt-enginio-0.6/: .qmake.conf  sync.profile
1er_programmes/hello/: hello.pro  main.cpp
1er_programmes/hello_goodbye/: hello_goodbye.pro  main.cpp
graphics_view/avancees/file_item/: file_item.pro  fileitemadvanced.cpp  fileitemadvanced.h  fileitembasic.cpp  fileitembasic.h  main.cpp
graphics_view/avancees/proxy_widget/: main.cpp  proxy_widget.pro
graphics_view/avancees/qgraphicstransform/: main.cpp  qgraphicstransform.pro  resources.qrc
graphics_view/avancees/qtransform/: main.cpp  qtransform.pro
graphics_view/demarrer/item_personnalise/: item_personnalise.pro  main.cpp
graphics_view/demarrer/items_generiques/: items_generiques.pro  main.cpp  resources.qrc
graphics_view/demarrer/mise_en_oeuvre/: main.cpp  mise_en_oeuvre.pro
graphics_view/exemple/qdirviewer/: dirdata.cpp  dirdata.h  diritem.cpp  diritem.h  dirloader.cpp  dirloader.h  filedata.cpp  filedata.h  fileitem.cpp  fileitem.h  main.cpp  mainwindow.cpp  mainwindow.h  navigationwidget.h  (+4 more)
qt_creator/exemple/: CMakeLists.txt  Koch.pro  controles.cpp  controles.h  controles.ui  main.cpp  processeur.cpp  processeur.h  widget.cpp  widget.h
(+453 files in other folders)
